--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "styled-components": "^5.1.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "updated": "^2.0.2",
+    "workbox-cli": "^5.1.4",
+    "workbox-precaching": "^5.1.4",
+    "workbox-routing": "^5.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && workbox injectManifest",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
